--- a/playground/templates/playground/bye.html
+++ b/playground/templates/playground/bye.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Bye</title>
 </head>
 <body>
+<h1>{{ singer }} - {{ title }}</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/iwgkwriv0OE?si=2ZUMJxOGKMYGq_Pi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <br>
 <pre>많은 시간이 지나도
